2007-07-09  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update to GPGME 1.1.5.

	* src/Makefile.am (gpg4win_pkg_gpgme_configure): Enable gpgsm.

2007-07-05  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update to Gtk+ 2.10.13.

	* patches/claws-mail-2.10.0/03-w32-port.patch: Fix cut&paste bug.
	* patches/claws-mail-2.9.2/03-w32-port.patch: Likewise.
	Spotted by Colin Leroy.

2007-07-04  Jan-Oliver Wagner  <jan-oliver.wagner@intevation.de>

	* README: Added just another dependency that sometimes happen to miss.

2007-07-03  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update sylpheed entry to claws-mail.

	* configure.ac: Add dirmngr.
	* include/config.nsi.in: Add dirmngr.
	* src/Makefile.am (gpg4win_spkgs): Add dirmngr.
	(gpg4win_pkg_dirmngr_configure): New variable.
	* src/inst-dirmngr.nsi, src/uninst-dirmngr.nsi: New files.
	* src/inst-sections.nsi [HAVE_PKG_DIRMNGR]: Include installer
	and uninstaller snippet for dirmngr.

	* Makefile.am (EXTRA_DIST): Add
	patches/claws-mail-2.10.0/01-w32-logo.patch,
	patches/claws-mail-2.10.0/02-w32-icon.patch,
	patches/claws-mail-2.10.0/03-w32-port.patch,
	patches/claws-mail-2.10.0/04-smime-plugin.patch and
	patches/claws-mail-2.10.0/99-auto.patch.
	* patches/claws-mail-2.10.0/01-w32-logo.patch,
	patches/claws-mail-2.10.0/02-w32-icon.patch,
	patches/claws-mail-2.10.0/03-w32-port.patch,
	patches/claws-mail-2.10.0/04-smime-plugin.patch,
	patches/claws-mail-2.10.0/99-auto.patch: New files.

2007-07-02  Marcus Brinkmann  <marcus@g10code.de>

	* src/Makefile.am (gpg4win_pkg_claws_mail_configure): Fix config
	dir.

	* Makefile.am (EXTRA_DIST): Add
	patches/claws-mail-2.9.2/01-w32-logo.patch,
	patches/claws-mail-2.9.2/02-w32-icon.patch,
	patches/claws-mail-2.9.2/03-w32-port.patch,
	patches/claws-mail-2.9.2/04-smime-plugin.patch and
	patches/claws-mail-2.9.2/99-auto.patch.
	* patches/claws-mail-2.9.2/01-w32-logo.patch,
	patches/claws-mail-2.9.2/02-w32-icon.patch,